spacing fix

--- a/src/pages/Landing/Landing.module.css
+++ b/src/pages/Landing/Landing.module.css
@@ -28,7 +28,7 @@
   padding: 0 4vw;
   text-align: justify;
   position: absolute;
-  bottom: 5vw;
+  bottom: 2.5em;
   line-height: 1.5;
 }
 
